--- a/tasks.json
+++ b/tasks.json
@@ -1,7 +1,7 @@
 [
   {
     "description": "bye milk - 1ltr",
-    "completed": false
+    "completed": true
   },
   {
     "description": "go to gym at 5pm",
